force-app/main/default/objects/Payment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date when this EMI is due.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>