force-app/main/default/objects/Payment__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether EMI has been paid.</description>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>